Fixed horizontal scrolling

--- a/style.scss
+++ b/style.scss
@@ -113,7 +113,7 @@ a.social:hover   {
     margin-left: 7.5em;
     padding: 6px 0 0;
     position: absolute;
-    width: 100%;
+    width: auto; // originally 100% which caused horizontal scrollbar
     z-index: 999;
 }
 
